--- a/style.css
+++ b/style.css
@@ -1,68 +1,70 @@
-@mixin font-base {
-    padding: 0;
-    margin: 0;
-    line-height: 1.3;
-    font-weight: 600;
-}
 
 h4{
-    @include font-base;
+  padding: 0;
+  margin: 0;
+  line-height: 1.3;
+  font-weight: 600;
 }
 
 p{
-    @include font-base;
-    color: grey;
-    font-size: 0.9rem;
+  padding: 0;
+  margin: 0;
+  line-height: 1.3;
+  font-weight: 600;
+  color: grey;
+  font-size: 0.9rem;
 }
 
 body{
-  background-color: #eee;
+background-color: #eee;
 }
 
 .container{
-    width: 560px;
-    height: 100vh;
-    background-color: #fff;
-    margin: 0 auto;
+  width: 560px;
+  height: 100vh;
+  background-color: #fff;
+  margin: 0 auto;
 }
 
 header, section {
-  position: fixed;
-  text-align: center;
-  width: 560px;
-  background-color: #fff;
+position: fixed;
+text-align: center;
+width: 560px;
+background-color: #fff;
 }
 
 section{
-  top: 50px;
+top: 50px;
 }
 
 .logo {
-  width: 120px;
-  padding: 10px;
+width: 120px;
+padding: 10px;
 }
 
 main {
-  padding: 370px 18px 10px;
+padding: 370px 18px 10px;
 }
 
 article {
-  display: flex;
-  align-items: center;
-  padding: 8px 12px; 
-  border: 2px solid white;
-  border-radius: 8px;
-  margin: 0 auto;
-  &:hover {
-    border: 2px solid #ff999;
-  }
+display: flex;
+align-items: center;
+padding: 8px 12px; 
+border: 2px solid white;
+border-radius: 8px;
+margin: 0 auto;
+
 }
 
+article:hover {
+  border: 2px solid #ff9999;
+  cursor: pointer;
+}
 .thumb {
-  height: 170px;
-  border-radius: 4px;
+height: 150px;
+border-radius: 4px;
 }
 
 .details{
-  padding: 8px 22px;
+padding: 8px 22px;
 }
