--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 h4{
   padding: 0;
   margin: 0;
@@ -33,6 +32,10 @@ width: 560px;
 background-color: #fff;
 }
 
+header {
+  top:0px;
+}
+
 section{
 top: 50px;
 }
@@ -53,12 +56,12 @@ padding: 8px 12px;
 border: 2px solid white;
 border-radius: 8px;
 margin: 0 auto;
-
+overflow: hidden;
 }
 
 article:hover {
   border: 2px solid #ff9999;
-  cursor: pointer;
+  cursor: pointer
 }
 .thumb {
 height: 150px;
